force-app/main/default/objects/Activity_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead_Master__c</referenceTo>
    <relationshipLabel>Activity Logs</relationshipLabel>
    <relationshipName>Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>