force-app/main/default/objects/Activity_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity_Pipeline__c</referenceTo>
    <relationshipLabel>Activity Logs</relationshipLabel>
    <relationshipName>Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>